<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.auth.LoginActivity">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="20dp" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/rectangle_1"
                    android:layout_width="match_parent"
                    android:layout_height="291dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/intro_imgview2"
                    android:elevation="16dp"
                    />
                <TextView
                    android:id="@+id/mixing_y"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    app:layout_constraintStart_toStartOf="@id/glStart"
                    app:layout_constraintEnd_toEndOf="@id/glEnd"
                    app:layout_constraintTop_toBottomOf="@id/rectangle_1"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/mixing_your_intro"
                    android:textAppearance="@style/mixing_your_intro"
                    android:gravity="center_horizontal|top"
                    />
                <TextView
                    android:id="@+id/you_ll_need"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_constraintLeft_toLeftOf="@id/glStart"
                    app:layout_constraintRight_toRightOf="@id/glEnd"
                    app:layout_constraintTop_toBottomOf="@id/mixing_y"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/peel_the_st"
                    android:textAppearance="@style/peel_the_st"
                    android:lineSpacingExtra="6sp"
                    android:translationY="-3.04sp"
                    android:gravity="center_horizontal|top"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clPropogatorPosition1"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/glStart1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="20dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/glEnd1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="20dp" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/rectangle_11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/group_19142"
                        android:elevation="16dp"
                        app:layout_constraintEnd_toEndOf="@id/glEnd1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/mixing_y1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center_horizontal|top"
                        android:text="@string/which_date_"
                        android:textAppearance="@style/which_date_"
                        app:layout_constraintEnd_toEndOf="@id/glEnd1"
                        app:layout_constraintStart_toStartOf="@id/glStart1"
                        app:layout_constraintTop_toBottomOf="@id/rectangle_11" />

                    <TextView
                        android:id="@+id/you_ll_need1"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginTop="15dp"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/installatio"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/installatio"
                        app:layout_constraintLeft_toLeftOf="@id/glStart1"
                        app:layout_constraintTop_toBottomOf="@id/mixing_y1" />

                    <RelativeLayout
                        android:id="@+id/rlBtnCalender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="@id/glEnd1"
                        app:layout_constraintStart_toStartOf="@id/glStart1"
                        app:layout_constraintTop_toBottomOf="@id/you_ll_need1">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/select_date"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:textColor="@color/black"
                            android:textColorHint="#D9D9D9"
                            android:hint="@string/select_date"
                            android:textAppearance="@style/select_date" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/btnCalender"
                            android:layout_width="17dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/group"
                            android:foregroundGravity="center" />
                    </RelativeLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clPropogatorPosition2"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/glStart2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="20dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/glEnd2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="20dp" />
                    <!-- Auto layout, variables, and unit scale are not yet supported -->
                    <TextView
                        android:id="@+id/take_propag2"
                        android:layout_width="388dp"
                        android:layout_height="53.44dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/glEnd2"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:layout_alignParentTop="true"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/take_propag"
                        android:textAppearance="@style/take_propag"
                        android:lineSpacingExtra="6sp"
                        android:translationY="-3.04sp"
                        android:gravity="top"
                        />
                    <!-- Auto layout, variables, and unit scale are not yet supported -->
                    <TextView
                        android:id="@+id/as_per_imag2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/take_propag2"
                        app:layout_constraintEnd_toEndOf="@id/glEnd2"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:text="@string/as_per_imag"
                        android:textAppearance="@style/as_per_imag"
                        android:lineSpacingExtra="6sp"
                        android:translationY="-3.04sp"
                        android:gravity="top"
                        />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/close_up_pi2"
                        android:layout_width="match_parent"
                        android:layout_height="291dp"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/as_per_imag2"
                        app:layout_constraintEnd_toEndOf="@id/glEnd2"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:background="@drawable/close01"
                        android:elevation="16dp"
                        />
                    <!-- Auto layout, variables, and unit scale are not yet supported -->
                    <!-- Auto layout, variables, and unit scale are not yet supported -->
                    <TextView
                        android:id="@+id/seed_depth_"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/close_up_pi2"
                        app:layout_constraintEnd_toEndOf="@id/glEnd2"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:text="@string/seed_depth_"
                        android:textAppearance="@style/seed_depth_"
                        android:lineSpacingExtra="6sp"
                        android:translationY="-3.04sp"
                        android:gravity="top"
                        />
                    <!-- Auto layout, variables, and unit scale are not yet supported -->
                    <TextView
                        android:id="@+id/using_your_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/seed_depth_"
                        app:layout_constraintEnd_toEndOf="@id/glEnd2"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:text="@string/using_your_"
                        android:textAppearance="@style/using_your_"
                        android:lineSpacingExtra="6sp"
                        android:translationY="-3.04sp"
                        android:gravity="top"
                        />
                    <TextView
                        android:id="@+id/kale2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/using_your_2"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:layout_alignParentTop="true"
                        android:text="@string/kale"
                        android:fontFamily="@font/poppins_bold"
                        android:textAppearance="@style/take_propag"
                        android:lineSpacingExtra="6sp"
                        android:translationY="-3.04sp"
                        android:gravity="top"
                        />
                    <View
                        android:id="@+id/close_up_pi12"
                        android:layout_width="0dp"
                        android:layout_height="291dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/kale2"
                        app:layout_constraintEnd_toEndOf="@id/glEnd2"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/close1"
                        android:elevation="16dp"
                        />
                    <!-- Auto layout, variables, and unit scale are not yet supported -->
                    <TextView
                        android:id="@+id/chives_rock2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/poppins_bold"
                        app:layout_constraintTop_toBottomOf="@id/close_up_pi12"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:text="@string/chives_rocket"
                        android:textAppearance="@style/take_propag"
                        android:lineSpacingExtra="6sp"
                        android:translationY="-3.04sp"
                        android:gravity="top"
                        />
                    <View
                        android:id="@+id/close_up_pi22"
                        android:layout_width="0dp"
                        android:layout_height="291dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/chives_rock2"
                        app:layout_constraintEnd_toEndOf="@id/glEnd2"
                        app:layout_constraintStart_toStartOf="@id/glStart2"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/close05"
                        android:elevation="16dp"
                        />



                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>